WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
117987
Fix cast-align warnings in WebKit2/Platform/CoreIPC
https://bugs.webkit.org/show_bug.cgi?id=117987
Summary
Fix cast-align warnings in WebKit2/Platform/CoreIPC
Csaba Osztrogonác
Reported
2013-06-25 06:00:55 PDT
SSIA
Attachments
Patch
(5.14 KB, patch)
2013-06-25 06:02 PDT
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2013-06-25 06:02:07 PDT
Created
attachment 205391
[details]
Patch
Csaba Osztrogonác
Comment 2
2013-06-25 06:04:08 PDT
Comment on
attachment 205391
[details]
Patch It's safe to use reinterpret_cast_ptr instead of reinterpret_cast, because the alignment is checked by alignBufferPosition() in ArgumentDecoder.cpp and it is forced by grow() in ArgumentEncoder.cpp
Rob Buis
Comment 3
2013-06-26 12:55:50 PDT
Comment on
attachment 205391
[details]
Patch LGTM.
Anders Carlsson
Comment 4
2013-06-26 12:59:56 PDT
(In reply to
comment #3
)
> (From update of
attachment 205391
[details]
) > LGTM.
Rob, this is a WebKit2 patch and needs to be approved by a WebKit2 owner.
Csaba Osztrogonác
Comment 5
2013-06-27 00:53:50 PDT
(In reply to
comment #4
)
> (In reply to
comment #3
) > > (From update of
attachment 205391
[details]
[details]) > > LGTM. > > Rob, this is a WebKit2 patch and needs to be approved by a WebKit2 owner.
Anders, and could you approve it as WebKit2 owner, please?
Csaba Osztrogonác
Comment 6
2013-06-27 06:39:55 PDT
ping for sign-off from a WebKit2 owner
Anders Carlsson
Comment 7
2013-06-27 10:01:43 PDT
Looks good.
Csaba Osztrogonác
Comment 8
2013-06-27 10:44:46 PDT
Committed
r152110
: <
http://trac.webkit.org/changeset/152110
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug