Fix cast-align warnings in WebKit2/Platform/CoreIPC https://bugs.webkit.org/show_bug.cgi?id=117987

Reviewed by Rob Buis, WK2 signed-off by Anders Carlsson.

* Platform/CoreIPC/ArgumentDecoder.cpp:
(CoreIPC::ArgumentDecoder::decode):
* Platform/CoreIPC/ArgumentEncoder.cpp:
(CoreIPC::ArgumentEncoder::encode):

Canonical link: https://commits.webkit.org/136185@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152110 268f45cc-cd09-0410-ab3c-d52691b4dbfc